# ratma-tg-types

./: Cargo.toml  NOTICE.md  README.md  ROADMAP.md  build.rs
.github/workflows/: rust.yml
crates/codegen/: Cargo.toml
crates/codegen/src/: lib.rs  methods.rs  naming.rs  schema.rs  types.rs  util.rs
crates/core/: Cargo.toml  api.json  build.rs
crates/core/src/: lib.rs
crates/http/: Cargo.toml  build.rs
crates/http/src/: ext.rs  lib.rs
examples/: auth.rs  files.rs  long_polling.rs  webhook.rs
generate/: Cargo.toml
generate/src/: methods.rs  schema.rs  types.rs  util.rs
src/: bot.rs  ext.rs  lib.rs
