[package]
name = "ratma-tg-types-codegen"
version = "0.0.79"
edition = "2024"
rust-version = "1.85"
authors = ["Alex Ballmer <gnu3ra@riseup.net>", "RATMA Studio"]
description = "Code generator (build-dep) for ratma-tg-types. Reads the Telegram Bot API spec JSON and emits Rust types and method bindings."
homepage = "https://github.com/RATMA-Studio/ratma-tg-types"
repository = "https://github.com/RATMA-Studio/ratma-tg-types.git"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
quote = "1.0.45"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
convert_case = "0.11.0"
once_cell = "1.21.4"
itertools = "0.14.0"
lazy_static = "1.5.0"
regex = "1.12.3"
