[package]
name = "ratma-tg-types-core"
version = "0.0.79"
edition = "2024"
rust-version = "1.95"
authors = ["Alex Ballmer <gnu3ra@riseup.net>", "RATMA Studio"]
description = "Pure Rust types for the Telegram Bot API and WebApp. No HTTP client."
homepage = "https://github.com/RATMA-Studio/ratma-tg-types"
repository = "https://github.com/RATMA-Studio/ratma-tg-types.git"
license = "MIT"

[dependencies]
anyhow = "1.0.102"
ordered-float = { version = "5.3.0", features = ["serde"] }
reqwest = { version = "0.12.28", features = ["multipart"], optional = true }
rhai = { version = "1.24.0", optional = true, features = ["internals"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["unbounded_depth"] }

[dev-dependencies]
rmp-serde = "1.3.1"

[build-dependencies]
anyhow = "1.0.102"
ratma-tg-types-codegen = { path = "../codegen", version = "0.0.79" }

[features]
multipart = ["dep:reqwest"]
rhai = ["dep:rhai"]
