[package]
name = "ratma-tg-types-http"
version = "0.0.79"
edition = "2024"
rust-version = "1.95"
authors = ["Alex Ballmer <gnu3ra@riseup.net>", "RATMA Studio"]
description = "Async HTTP client and method bindings for the Telegram Bot API. Built on ratma-tg-types-core."
homepage = "https://github.com/RATMA-Studio/ratma-tg-types"
repository = "https://github.com/RATMA-Studio/ratma-tg-types.git"
license = "MIT"

include = ["src/**/*", "build.rs", "api.json", "Cargo.toml"]

[dependencies]
anyhow = "1.0.102"
async-stream = "0.3.6"
futures-core = { version = "0.3.32", features = ["cfg-target-has-atomic"] }
futures-util = "0.3.32"
http-body-util = "0.1.3"
hyper = { version = "1.10.1", features = ["server", "http2"] }
hyper-util = { version = "0.1.20", features = ["server", "tokio"] }
log = "0.4.32"
ordered-float = { version = "5.3.0", features = ["serde"] }
ratma-tg-types-core = { path = "../core", version = "0.0.79", features = ["multipart"] }
rand = "0.10.1"
reqwest = { version = "0.13.4", features = ["json", "multipart", "stream", "query"] }
rhai = { version = "1.25.1", optional = true, features = ["internals"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["unbounded_depth"] }
serde_urlencoded = "0.7.1"
tokio = { version = "1.52.3", features = [
    "net",
    "socket2",
    "io-util",
    "tokio-macros",
    "macros",
    "rt-multi-thread"
] }
uuid = "1.23.3"

[dev-dependencies]
tokio-test = "0.4.5"

[build-dependencies]
anyhow = "1.0.102"
ratma-tg-types-codegen = { path = "../codegen", version = "0.0.79" }

[features]
rhai = ["dep:rhai", "ratma-tg-types-core/rhai"]
